--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
     "@types/request": "^2.48.1",
-    "lodash": "^4.17.14",
+    "gh-pages": "^2.0.1",
+    "lodash": ">=4.17.14",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
@@ -22,7 +23,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d dist"
   },
   "eslintConfig": {
     "extends": "react-app"
