--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
     "@types/request": "^2.48.1",
+    "aws-sdk": "^2.496.0",
     "gh-pages": "^2.0.1",
     "lodash": ">=4.17.14",
     "react": "^16.8.6",
